deploy: 6557f1359cb51f0dce53cd99711b697f43d70e87

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -33,9 +33,9 @@
 <a href="udp__posix_8h_source.html"/>
 <a href="message__types_8h.html"/>
 <a href="protocol_8md.html"/>
-<a href="bcnp__codegen_8py.html"/>
 <a href="README_8md.html"/>
-<a href="schema_2README_8md.html"/>
+<a href="bcnp__codegen_8py.html"/>
+<a href="schema_8md.html"/>
 <a href="command__queue_8h.html"/>
 <a href="controller_8h.html"/>
 <a href="dispatcher_8cpp.html"/>
@@ -57,6 +57,7 @@
 <a href="tcp__posix_8h.html"/>
 <a href="udp__posix_8cpp.html"/>
 <a href="udp__posix_8h.html"/>
+<a href="md_schema.html"/>
 <a href="md__2github_2workspace_2protocol.html"/>
 <a href="deprecated.html"/>
 <a href="group__ProtocolConstants.html"/>
@@ -454,24 +455,21 @@
 <a href="group__ProtocolConstants.html#gada049fbce27559ff502f692a414b3f8c"/>
 <a href="hierarchy.html"/>
 <a href="index.html"/>
-<a href="index.html#autotoc_md1"/>
-<a href="index.html#autotoc_md11"/>
-<a href="index.html#autotoc_md12"/>
-<a href="index.html#autotoc_md13"/>
-<a href="index.html#autotoc_md14"/>
-<a href="index.html#autotoc_md16"/>
-<a href="index.html#autotoc_md17"/>
-<a href="index.html#autotoc_md19"/>
-<a href="index.html#autotoc_md2"/>
-<a href="index.html#autotoc_md21"/>
-<a href="index.html#autotoc_md23"/>
-<a href="index.html#autotoc_md24"/>
-<a href="index.html#autotoc_md25"/>
-<a href="index.html#autotoc_md4"/>
-<a href="index.html#autotoc_md6"/>
-<a href="index.html#autotoc_md7"/>
-<a href="index.html#autotoc_md8"/>
-<a href="index.html#autotoc_md9"/>
+<a href="index.html#autotoc_md28"/>
+<a href="index.html#autotoc_md29"/>
+<a href="index.html#autotoc_md31"/>
+<a href="index.html#autotoc_md32"/>
+<a href="index.html#autotoc_md33"/>
+<a href="index.html#autotoc_md34"/>
+<a href="index.html#autotoc_md35"/>
+<a href="index.html#autotoc_md36"/>
+<a href="index.html#autotoc_md37"/>
+<a href="index.html#autotoc_md39"/>
+<a href="index.html#autotoc_md40"/>
+<a href="index.html#autotoc_md41"/>
+<a href="index.html#autotoc_md43"/>
+<a href="index.html#autotoc_md45"/>
+<a href="index.html#autotoc_md47"/>
 <a href="md__2github_2workspace_2protocol.html"/>
 <a href="md__2github_2workspace_2protocol.html#autotoc_md49"/>
 <a href="md__2github_2workspace_2protocol.html#autotoc_md50"/>
@@ -505,6 +503,25 @@
 <a href="md__2github_2workspace_2protocol.html#autotoc_md86"/>
 <a href="md__2github_2workspace_2protocol.html#autotoc_md87"/>
 <a href="md__2github_2workspace_2protocol.html#autotoc_md89"/>
+<a href="md_schema.html"/>
+<a href="md_schema.html#autotoc_md1"/>
+<a href="md_schema.html#autotoc_md11"/>
+<a href="md_schema.html#autotoc_md12"/>
+<a href="md_schema.html#autotoc_md13"/>
+<a href="md_schema.html#autotoc_md14"/>
+<a href="md_schema.html#autotoc_md16"/>
+<a href="md_schema.html#autotoc_md17"/>
+<a href="md_schema.html#autotoc_md19"/>
+<a href="md_schema.html#autotoc_md2"/>
+<a href="md_schema.html#autotoc_md21"/>
+<a href="md_schema.html#autotoc_md23"/>
+<a href="md_schema.html#autotoc_md24"/>
+<a href="md_schema.html#autotoc_md25"/>
+<a href="md_schema.html#autotoc_md4"/>
+<a href="md_schema.html#autotoc_md6"/>
+<a href="md_schema.html#autotoc_md7"/>
+<a href="md_schema.html#autotoc_md8"/>
+<a href="md_schema.html#autotoc_md9"/>
 <a href="message__queue_8h.html"/>
 <a href="message__queue_8h.html#a51a0bbc0634f6a07d5b533fed541f8cc"/>
 <a href="message__types_8h.html"/>
