deploy: 947374a9feff48a8a73c4f5b0bad10d0bd1e0d53

--- a/md__2github_2workspace_2protocol.html
+++ b/md__2github_2workspace_2protocol.html
@@ -105,7 +105,7 @@ $(function(){initNavTree('md__2github_2workspace_2protocol.html',''); initResiza
 <div class="contents">
 <div class="textblock"><p><a class="anchor" id="autotoc_md48"></a></p>
 <blockquote class="doxtable">
-<p>&zwj;<b>Version 3.2.0</b> </p>
+<p>&zwj;<b>Version 3.2.2</b> </p>
 </blockquote>
 <h1><a class="anchor" id="autotoc_md49"></a>
 </h1>
@@ -138,28 +138,30 @@ Version History</h1>
 <tr class="markdownTableHead">
 <th class="markdownTableHeadNone">Version   </th><th class="markdownTableHeadNone">Type   </th><th class="markdownTableHeadNone">Changes    </th></tr>
 <tr class="markdownTableRowOdd">
+<td class="markdownTableBodyNone"><b>3.2.2</b>   </td><td class="markdownTableBodyNone">Bugfix   </td><td class="markdownTableBodyNone">Fix telemetry behaviour and move into stable!    </td></tr>
+<tr class="markdownTableRowEven">
 <td class="markdownTableBodyNone"><b>3.2.1</b>   </td><td class="markdownTableBodyNone">Bugfix   </td><td class="markdownTableBodyNone">The Commenting and Docs Update!    </td></tr>
-<tr class="markdownTableRowEven">
+<tr class="markdownTableRowOdd">
 <td class="markdownTableBodyNone"><b>3.2.0</b>   </td><td class="markdownTableBodyNone">Minor   </td><td class="markdownTableBodyNone">Full duplex communication (bidirectional telemetry)    </td></tr>
-<tr class="markdownTableRowOdd">
+<tr class="markdownTableRowEven">
 <td class="markdownTableBodyNone"><b>3.1.0</b>   </td><td class="markdownTableBodyNone">Minor   </td><td class="markdownTableBodyNone">Decoupled command queue, genericized message handling, deprecated SPI    </td></tr>
-<tr class="markdownTableRowEven">
+<tr class="markdownTableRowOdd">
 <td class="markdownTableBodyNone"><b>3.0.1</b>   </td><td class="markdownTableBodyNone">Bugfix   </td><td class="markdownTableBodyNone">Minor fixes    </td></tr>
-<tr class="markdownTableRowOdd">
+<tr class="markdownTableRowEven">
 <td class="markdownTableBodyNone"><b>3.0.0</b>   </td><td class="markdownTableBodyNone"><b>Major</b>   </td><td class="markdownTableBodyNone">Registration-based serialization, JSON schema, codegen, handshake. <em>Breaking change from v2.x</em>    </td></tr>
-<tr class="markdownTableRowEven">
+<tr class="markdownTableRowOdd">
 <td class="markdownTableBodyNone">2.4.1   </td><td class="markdownTableBodyNone">Optimization   </td><td class="markdownTableBodyNone">Zero-copy parsing with <code>PacketView</code>, batch locking    </td></tr>
-<tr class="markdownTableRowOdd">
+<tr class="markdownTableRowEven">
 <td class="markdownTableBodyNone">2.4.0   </td><td class="markdownTableBodyNone">Minor   </td><td class="markdownTableBodyNone">16-bit command count (65k/packet), dynamic allocation    </td></tr>
-<tr class="markdownTableRowEven">
+<tr class="markdownTableRowOdd">
 <td class="markdownTableBodyNone">2.3.x   </td><td class="markdownTableBodyNone">Bugfixes   </td><td class="markdownTableBodyNone">CRC32, fixed-point encoding, UDP handshake    </td></tr>
-<tr class="markdownTableRowOdd">
+<tr class="markdownTableRowEven">
 <td class="markdownTableBodyNone">2.2.x   </td><td class="markdownTableBodyNone">Minor   </td><td class="markdownTableBodyNone">Security fixes, optimization    </td></tr>
-<tr class="markdownTableRowEven">
-<td class="markdownTableBodyNone">2.1.x   </td><td class="markdownTableBodyNone">Minor   </td><td class="markdownTableBodyNone">TCP optimization    </td></tr>
 <tr class="markdownTableRowOdd">
-<td class="markdownTableBodyNone">2.0.x   </td><td class="markdownTableBodyNone"><b>Major</b>   </td><td class="markdownTableBodyNone">Complete rewrite, standalone library    </td></tr>
+<td class="markdownTableBodyNone">2.1.x   </td><td class="markdownTableBodyNone">Minor   </td><td class="markdownTableBodyNone">TCP optimization    </td></tr>
 <tr class="markdownTableRowEven">
+<td class="markdownTableBodyNone">2.0.x   </td><td class="markdownTableBodyNone"><b>Major</b>   </td><td class="markdownTableBodyNone">Complete rewrite, standalone library    </td></tr>
+<tr class="markdownTableRowOdd">
 <td class="markdownTableBodyNone">1.x   </td><td class="markdownTableBodyNone">Deprecated   </td><td class="markdownTableBodyNone">Initial release   </td></tr>
 </table>
 <hr  />
